Fix figures and add half accuracy data

--- a/src/research/data_analysis.ipynb
+++ b/src/research/data_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,14 +14,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
     "from pathlib import Path\n",
     "\n",
     "pd.options.display.float_format = '{:,.4f}'.format\n",
-    "root_dir = str(Path.cwd().parent.parent)"
+    "root_dir = str(Path.cwd().parent.parent)\n",
+    "\n",
+    "fontprop = {'family': 'serif'}"
    ]
   },
   {
@@ -33,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,35 +105,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
     "runtime_data = data['runtime'].values\n",
     "mae_data = data['mae_len'].values\n",
     "index = data.index.values\n",
-    "fig = plt.figure(figsize=(12,8), dpi=200)\n",
-    "plt.rcParams['text.usetex'] = True\n",
-    "plt.rcParams['font.family'] = ['serif']\n",
-    "plt.rcParams['font.serif'] = ['Latin Modern Roman']\n",
-    "plt.rcParams['font.size'] = 12\n",
+    "fig = plt.figure(figsize=(7,4), dpi=300)\n",
     "ax1 = plt.axes()\n",
     "ax2 = ax1.twinx()\n",
     "lgd1 = ax1.plot(index, runtime_data, 'b-', label='Tempo ' + r'$ \\alpha $' +  ' estático')\n",
     "lgd2 = ax2.plot(index, mae_data, 'b--', label='MAE ' + r'$ \\alpha $' +  ' estático')\n",
-    "ax1.set_xlabel('Passo Grosso (°)')\n",
-    "ax1.set_ylabel('Tempo (s)')\n",
-    "ax2.set_ylabel('MAE (°)')\n",
+    "ax1.set_xlabel('Passo Grosso (°)', fontprop)\n",
+    "ax1.set_ylabel('Tempo (s)', fontprop)\n",
+    "ax2.set_ylabel('MAE (°)', fontprop)\n",
     "lgd = lgd1 + lgd2\n",
     "labels = [l.get_label() for l in lgd]\n",
-    "ax1.legend(lgd, labels, loc='upper left')\n",
+    "ax1.legend(lgd, labels, loc='upper left', prop=fontprop)\n",
     "plt.savefig(\"busca_grossa_fina_pg.png\", bbox_inches='tight', pad_inches=0)\n",
     "plt.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,59 +183,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Fix\n",
     "data_sliced = data_f.loc[(data_f.index == 5)]\n",
     "runtime_data = data_sliced['runtime'].values\n",
     "mae_data = data_sliced['mae_len'].values\n",
     "index = data_sliced['learning_rate'].values\n",
-    "fig = plt.figure(figsize=(7,8), dpi=200)\n",
-    "plt.rcParams['text.usetex'] = True\n",
-    "plt.rcParams['font.family'] = ['serif']\n",
-    "plt.rcParams['font.serif'] = ['Latin Modern Roman']\n",
-    "plt.rcParams['font.size'] = 14\n",
+    "fig = plt.figure(figsize=(7,4), dpi=300)\n",
     "ax1 = plt.axes()\n",
     "ax2 = ax1.twinx()\n",
-    "lgd1 = ax1.plot(index, runtime_data, 'b-', label='Tempo ' + r'$ \\alpha $' +  ' estático')\n",
-    "lgd2 = ax2.plot(index, mae_data, 'b--', label='MAE ' + r'$ \\alpha $' +  ' estático')\n",
-    "ax1.set_xlabel('$\\it{Learning\\ rate}$')\n",
-    "ax1.set_ylabel('Tempo (s)')\n",
-    "ax2.set_ylabel('MAE (°)')\n",
-    "lgd = lgd1 + lgd2\n",
-    "labels = [l.get_label() for l in lgd]\n",
-    "ax1.legend(lgd, labels, loc='upper left')\n",
-    "plt.savefig(\"gradiente_simples_alfa.png\", bbox_inches='tight', pad_inches=0)\n",
-    "plt.close()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 61,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "ax1.plot(index, runtime_data, 'b-', label='Tempo ' + r'$ \\alpha $' +  ' estático')\n",
+    "ax2.plot(index, mae_data, 'b--', label='MAE ' + r'$ \\alpha $' +  ' estático')\n",
+    "ax1.set_xlabel('$\\it{Learning\\ rate}$', fontprop)\n",
+    "ax1.set_ylabel('Tempo (s)', fontprop)\n",
+    "ax2.set_ylabel('MAE (°)', fontprop)\n",
+    "# Adapt\n",
     "data_sliced = data_a.loc[(data_a.index == 5)]\n",
     "runtime_data = data_sliced['runtime'].values\n",
     "mae_data = data_sliced['mae_len'].values\n",
     "index = data_sliced['learning_rate'].values\n",
-    "fig = plt.figure(figsize=(7,8), dpi=200)\n",
-    "plt.rcParams['text.usetex'] = True\n",
-    "plt.rcParams['font.family'] = ['serif']\n",
-    "plt.rcParams['font.serif'] = ['Latin Modern Roman']\n",
-    "plt.rcParams['font.size'] = 14\n",
-    "ax1 = plt.axes()\n",
-    "ax2 = ax1.twinx()\n",
-    "lgd1 = ax1.plot(index, runtime_data, 'b-', label='Tempo ' + r'$ \\alpha $' +  ' adaptável')\n",
-    "lgd2 = ax2.plot(index, mae_data, 'b--', label='MAE ' + r'$ \\alpha $' +  ' adaptável')\n",
-    "ax1.set_xlabel('$\\it{Learning\\ rate}$')\n",
-    "ax1.set_ylabel('Tempo (s)')\n",
-    "ax2.set_ylabel('MAE (°)')\n",
-    "lgd = lgd1 + lgd2\n",
-    "labels = [l.get_label() for l in lgd]\n",
-    "ax1.legend(lgd, labels, loc='upper left')\n",
-    "plt.savefig(\"gradiente_simples_adapt_alfa.png\", bbox_inches='tight', pad_inches=0)\n",
+    "ax1.plot(index, runtime_data, 'r-', label='Tempo ' + r'$ \\alpha $' +  ' Adaptável')\n",
+    "ax2.plot(index, mae_data, 'r--', label='MAE ' + r'$ \\alpha $' +  ' Adaptável')\n",
+    "ax1.legend(loc='upper left', prop=fontprop)\n",
+    "ax2.legend(loc='upper right', prop=fontprop)\n",
+    "plt.savefig(\"gradiente_simples_alfa.png\", bbox_inches='tight', pad_inches=0)\n",
     "plt.close()"
    ]
   },
@@ -250,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,18 +231,14 @@
     "runtime_data = data_sliced['runtime'].values\n",
     "mae_data = data_sliced['mae_len'].values\n",
     "index = data_sliced.index.values\n",
-    "fig = plt.figure(figsize=(12,8), dpi=200)\n",
-    "plt.rcParams['text.usetex'] = True\n",
-    "plt.rcParams['font.family'] = ['serif']\n",
-    "plt.rcParams['font.serif'] = ['Latin Modern Roman']\n",
-    "plt.rcParams['font.size'] = 12\n",
+    "fig = plt.figure(figsize=(7,4), dpi=300)\n",
     "ax1 = plt.axes()\n",
     "ax2 = ax1.twinx()\n",
     "ax1.plot(index, runtime_data, 'b-', label='Tempo ' + r'$ \\alpha $' +  ' estático')\n",
     "ax2.plot(index, mae_data, 'b--', label='MAE ' + r'$ \\alpha $' +  ' estático')\n",
-    "ax1.set_xlabel('Passo Grosso (°)')\n",
-    "ax1.set_ylabel('Tempo (s)')\n",
-    "ax2.set_ylabel('MAE (°)')\n",
+    "ax1.set_xlabel('Passo Grosso (°)', fontprop)\n",
+    "ax1.set_ylabel('Tempo (s)', fontprop)\n",
+    "ax2.set_ylabel('MAE (°)', fontprop)\n",
     "# Adapt\n",
     "data_sliced = data_a.loc[(data_a['learning_rate'] == 0.7)]\n",
     "runtime_data = data_sliced['runtime'].values\n",
@@ -278,8 +246,8 @@
     "index = data_sliced.index.values\n",
     "ax1.plot(index, runtime_data, 'r-', label='Tempo ' + r'$ \\alpha $' +  ' Adaptável')\n",
     "ax2.plot(index, mae_data, 'r--', label='MAE ' + r'$ \\alpha $' +  ' Adaptável')\n",
-    "ax1.legend(loc='upper left')\n",
-    "ax2.legend(loc='upper right')\n",
+    "ax1.legend(loc='upper left', prop=fontprop)\n",
+    "ax2.legend(loc='upper right', prop=fontprop)\n",
     "plt.savefig(\"gradiente_simples_pg.png\", bbox_inches='tight', pad_inches=0)\n",
     "plt.close()"
    ]
@@ -300,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -338,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -376,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -399,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -408,18 +376,14 @@
     "runtime_data = data_sliced['runtime'].values\n",
     "mae_data = data_sliced['mae_len'].values\n",
     "index = data_sliced['momentum'].values\n",
-    "fig = plt.figure(figsize=(12,8), dpi=200)\n",
-    "plt.rcParams['text.usetex'] = True\n",
-    "plt.rcParams['font.family'] = ['serif']\n",
-    "plt.rcParams['font.serif'] = ['Latin Modern Roman']\n",
-    "plt.rcParams['font.size'] = 12\n",
+    "fig = plt.figure(figsize=(7,4), dpi=300)\n",
     "ax1 = plt.axes()\n",
     "ax2 = ax1.twinx()\n",
     "ax1.plot(index, runtime_data, 'b-', label='Tempo Momentum')\n",
     "ax2.plot(index, mae_data, 'b--', label='MAE Momentum')\n",
-    "ax1.set_xlabel('Momentum')\n",
-    "ax1.set_ylabel('Tempo (s)')\n",
-    "ax2.set_ylabel('MAE (°)')\n",
+    "ax1.set_xlabel('Momentum', fontprop)\n",
+    "ax1.set_ylabel('Tempo (s)', fontprop)\n",
+    "ax2.set_ylabel('MAE (°)', fontprop)\n",
     "# Nesterov\n",
     "data_sliced = data_n.loc[(data_n.index == 5) & (data_n['learning_rate'] == 0.07)]\n",
     "runtime_data = data_sliced['runtime'].values\n",
@@ -427,8 +391,8 @@
     "index = data_sliced['momentum'].values\n",
     "ax1.plot(index, runtime_data, 'r-', label='Tempo Nesterov')\n",
     "ax2.plot(index, mae_data, 'r--', label='MAE Nesterov')\n",
-    "ax1.legend(loc='upper left')\n",
-    "ax2.legend(loc='upper right')\n",
+    "ax1.legend(loc='upper left', prop=fontprop)\n",
+    "ax2.legend(loc='upper right', prop=fontprop)\n",
     "plt.savefig(\"momentum_beta.png\", bbox_inches='tight', pad_inches=0)\n",
     "plt.close()"
    ]
@@ -442,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -451,18 +415,14 @@
     "runtime_data = data_sliced['runtime'].values\n",
     "mae_data = data_sliced['mae_len'].values\n",
     "index = data_sliced['learning_rate'].values\n",
-    "fig = plt.figure(figsize=(12,8), dpi=200)\n",
-    "plt.rcParams['text.usetex'] = True\n",
-    "plt.rcParams['font.family'] = ['serif']\n",
-    "plt.rcParams['font.serif'] = ['Latin Modern Roman']\n",
-    "plt.rcParams['font.size'] = 12\n",
+    "fig = plt.figure(figsize=(7,4), dpi=300)\n",
     "ax1 = plt.axes()\n",
     "ax2 = ax1.twinx()\n",
     "ax1.plot(index, runtime_data, 'b-', label='Tempo Momentum')\n",
     "ax2.plot(index, mae_data, 'b--', label='MAE Momentum')\n",
-    "ax1.set_xlabel('$\\it{Learning\\ rate}$')\n",
-    "ax1.set_ylabel('Tempo (s)')\n",
-    "ax2.set_ylabel('MAE (°)')\n",
+    "ax1.set_xlabel('$\\it{Learning\\ rate}$', fontprop)\n",
+    "ax1.set_ylabel('Tempo (s)', fontprop)\n",
+    "ax2.set_ylabel('MAE (°)', fontprop)\n",
     "# Nesterov\n",
     "data_sliced = data_n.loc[(data_n.index == 5) & (data_n['momentum'] == 0.9)]\n",
     "runtime_data = data_sliced['runtime'].values\n",
@@ -470,8 +430,8 @@
     "index = data_sliced['learning_rate'].values\n",
     "ax1.plot(index, runtime_data, 'r-', label='Tempo Nesterov')\n",
     "ax2.plot(index, mae_data, 'r--', label='MAE Nesterov')\n",
-    "ax1.legend(loc='upper left')\n",
-    "ax2.legend(loc='upper right')\n",
+    "ax1.legend(loc='upper left', prop=fontprop)\n",
+    "ax2.legend(loc='upper right', prop=fontprop)\n",
     "plt.savefig(\"momentum_alfa.png\", bbox_inches='tight', pad_inches=0)\n",
     "plt.close()"
    ]
@@ -485,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -494,18 +454,14 @@
     "runtime_data = data_sliced['runtime'].values\n",
     "mae_data = data_sliced['mae_len'].values\n",
     "index = data_sliced.index.values\n",
-    "fig = plt.figure(figsize=(12,8), dpi=200)\n",
-    "plt.rcParams['text.usetex'] = True\n",
-    "plt.rcParams['font.family'] = ['serif']\n",
-    "plt.rcParams['font.serif'] = ['Latin Modern Roman']\n",
-    "plt.rcParams['font.size'] = 12\n",
+    "fig = plt.figure(figsize=(7,4), dpi=300)\n",
     "ax1 = plt.axes()\n",
     "ax2 = ax1.twinx()\n",
     "ax1.plot(index, runtime_data, 'b-', label='Tempo Momentum')\n",
     "ax2.plot(index, mae_data, 'b--', label='MAE Momentum')\n",
-    "ax1.set_xlabel('Passo Grosso (°)')\n",
-    "ax1.set_ylabel('Tempo (s)')\n",
-    "ax2.set_ylabel('MAE (°)')\n",
+    "ax1.set_xlabel('Passo Grosso (°)', fontprop)\n",
+    "ax1.set_ylabel('Tempo (s)', fontprop)\n",
+    "ax2.set_ylabel('MAE (°)', fontprop)\n",
     "# Nesterov\n",
     "data_sliced = data_n.loc[(data_n['learning_rate'] == 0.07) & (data_n['momentum'] == 0.9)]\n",
     "runtime_data = data_sliced['runtime'].values\n",
@@ -513,8 +469,8 @@
     "index = data_sliced.index.values\n",
     "ax1.plot(index, runtime_data, 'r-', label='Tempo Nesterov')\n",
     "ax2.plot(index, mae_data, 'r--', label='MAE Nesterov')\n",
-    "ax1.legend(loc='upper left')\n",
-    "ax2.legend(loc='upper right')\n",
+    "ax1.legend(loc='upper left', prop=fontprop)\n",
+    "ax2.legend(loc='upper right', prop=fontprop)\n",
     "plt.savefig(\"momentum_pg.png\", bbox_inches='tight', pad_inches=0)\n",
     "plt.close()"
    ]
@@ -535,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -561,7 +517,7 @@
     "data_sliced = data_m.loc[(data_m['mae_len'] < 0.3)]\n",
     "data_sliced = data_sliced.sort_values(by=['runtime', 'rmse_len'])\n",
     "data_sliced = data_sliced[:10]\n",
-    "print(data_sliced)\n"
+    "print(data_sliced)"
    ]
   },
   {
@@ -573,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -612,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -621,12 +577,12 @@
      "text": [
       "                               runtime  mae_len  rmse_len\n",
       "technique                                                \n",
-      "esprit                          1.6705   0.0000    0.0000\n",
-      "music_coarse_fine_grid_search  51.0242   0.6947   11.6139\n",
-      "music_gradient_simple          46.4379   0.4342    7.4790\n",
-      "music_gradient_adapt_lr        23.3030   0.5931    9.7541\n",
-      "music_gradient_momentum        23.9132   0.5750    9.6104\n",
-      "music_gradient_nesterov        25.8878   0.5572    9.4030\n"
+      "esprit                          1.6537   0.0000    0.0000\n",
+      "music_coarse_fine_grid_search 108.1367   0.3367    7.2494\n",
+      "music_gradient_simple          56.8658   0.2845    6.2201\n",
+      "music_gradient_adapt_lr        39.9917   0.3205    7.2172\n",
+      "music_gradient_momentum        41.2383   0.2796    6.5136\n",
+      "music_gradient_nesterov        43.1562   0.2588    6.2032\n"
      ]
     }
    ],
