Add accuracy full results & increase cs in HP analysis

--- a/src/research/data_analysis.ipynb
+++ b/src/research/data_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -282,18 +282,24 @@
       "5                   0.0700  12.2905   0.1995    4.1069        0.1037\n",
       "5                   0.0500  13.9967   0.1994    4.1134        0.1002\n",
       "3                   0.1000  22.3830   0.2937    8.2159        0.1109\n",
-      "3                   0.0900  22.5166   0.2890    8.2145        0.1056\n",
-      "3                   0.0700  23.0995   0.2843    8.2135        0.0987\n",
-      "3                   0.0500  24.4051   0.2832    8.2140        0.0950\n",
-      "2                   0.1000  44.7556   0.2918    8.2171        0.1005\n",
-      "2                   0.0900  44.8300   0.2875    8.2161        0.0967\n"
+      "             learning_rate  runtime  mae_len  rmse_len  rmse_len_99p\n",
+      "coarse_step                                                         \n",
+      "8                   0.1000   8.5930   0.5167    8.1139        0.1796\n",
+      "8                   0.0900   8.9049   0.5202    8.1318        0.1643\n",
+      "7                   0.1000   8.9704   0.5264    8.8351        0.1722\n",
+      "9                   0.0700   9.0361   1.1999   16.1090        0.2897\n",
+      "7                   0.0900   9.2515   0.5276    8.8429        0.1544\n"
      ]
     }
    ],
    "source": [
     "data_sliced = data_f.loc[(data_f['mae_len'] < 0.3)]\n",
     "data_sliced = data_sliced.sort_values(by=['runtime', 'rmse_len'])\n",
-    "data_sliced = data_sliced[:10]\n",
+    "data_sliced = data_sliced[:5]\n",
+    "print(data_sliced)\n",
+    "data_sliced = data_f.loc[(data_f['rmse_len_99p'] < 0.3)]\n",
+    "data_sliced = data_sliced.sort_values(by=['runtime', 'rmse_len'])\n",
+    "data_sliced = data_sliced[:5]\n",
     "print(data_sliced)"
    ]
   },
@@ -306,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -320,18 +326,24 @@
       "5                   0.6000   8.2326   0.1913    4.0941        0.0991\n",
       "5                   0.5000   8.3104   0.1923    4.0946        0.0994\n",
       "5                   0.4000   8.4645   0.1936    4.0957        0.0997\n",
-      "5                   0.3000   8.7494   0.1957    4.0986        0.1000\n",
-      "5                   0.2000   9.2791   0.1921    4.0940        0.0997\n",
-      "5                   0.1000  10.9345   0.1945    4.0991        0.1000\n",
-      "5                   0.0900  11.2704   0.1955    4.1011        0.1007\n",
-      "5                   0.0700  12.2948   0.1973    4.1062        0.0999\n"
+      "             learning_rate  runtime  mae_len  rmse_len  rmse_len_99p\n",
+      "coarse_step                                                         \n",
+      "9                   0.9000   3.7038   1.1253   16.0409        0.1891\n",
+      "9                   0.8000   3.7134   1.1255   16.0409        0.1894\n",
+      "9                   0.7000   3.7813   1.1259   16.0410        0.1908\n",
+      "9                   0.6000   3.8785   1.1266   16.0410        0.1944\n",
+      "9                   0.5000   4.0075   1.1275   16.0411        0.2032\n"
      ]
     }
    ],
    "source": [
     "data_sliced = data_a.loc[(data_a['mae_len'] < 0.3)]\n",
     "data_sliced = data_sliced.sort_values(by=['runtime', 'rmse_len'])\n",
-    "data_sliced = data_sliced[:10]\n",
+    "data_sliced = data_sliced[:5]\n",
+    "print(data_sliced)\n",
+    "data_sliced = data_a.loc[(data_a['rmse_len_99p'] < 0.3)]\n",
+    "data_sliced = data_sliced.sort_values(by=['runtime', 'rmse_len'])\n",
+    "data_sliced = data_sliced[:5]\n",
     "print(data_sliced)"
    ]
   },
@@ -344,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -406,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -445,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -491,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -505,18 +517,24 @@
       "5                   0.0900    0.8000   8.2818   0.1912    4.0933        0.0989\n",
       "5                   0.0900    0.8500   8.2877   0.1897    4.0936        0.0983\n",
       "5                   0.1000    0.7500   8.2894   0.1912    4.0935        0.0989\n",
-      "5                   0.0900    0.7500   8.3670   0.1912    4.0936        0.0989\n",
-      "5                   0.0700    0.8500   8.3898   0.1905    4.0934        0.0985\n",
-      "5                   0.1000    0.7000   8.3975   0.1915    4.0939        0.0992\n",
-      "5                   0.0700    0.8000   8.4497   0.1916    4.0933        0.0993\n",
-      "5                   0.1000    0.9000   8.4511   0.1877    4.0932        0.0942\n"
+      "             learning_rate  momentum  runtime  mae_len  rmse_len  rmse_len_99p\n",
+      "coarse_step                                                                   \n",
+      "9                   0.1000    0.8500   3.8084   1.1241   16.0412        0.1893\n",
+      "9                   0.1000    0.8000   3.8282   1.1262   16.0405        0.1907\n",
+      "9                   0.2000    0.8000   3.8558   1.3235   16.4935        0.2818\n",
+      "9                   0.0900    0.8500   3.8655   0.9440   13.8755        0.1755\n",
+      "9                   0.0900    0.8000   3.9126   1.1263   16.0406        0.1902\n"
      ]
     }
    ],
    "source": [
     "data_sliced = data_m.loc[(data_m['mae_len'] < 0.3)]\n",
     "data_sliced = data_sliced.sort_values(by=['runtime', 'rmse_len'])\n",
-    "data_sliced = data_sliced[:10]\n",
+    "data_sliced = data_sliced[:5]\n",
+    "print(data_sliced)\n",
+    "data_sliced = data_m.loc[(data_m['rmse_len_99p'] < 0.3)]\n",
+    "data_sliced = data_sliced.sort_values(by=['runtime', 'rmse_len'])\n",
+    "data_sliced = data_sliced[:5]\n",
     "print(data_sliced)"
    ]
   },
@@ -529,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -543,19 +561,24 @@
       "5                   0.0500    0.9500   8.6291   0.1840    4.0931        0.0929\n",
       "5                   0.0700    0.9000   8.6943   0.1921    4.0948        0.1103\n",
       "5                   0.0300    0.9000   8.7137   0.1903    4.0932        0.0989\n",
-      "5                   0.0700    0.8500   8.7413   0.1951    4.0942        0.1129\n",
-      "5                   0.0300    0.9500   8.7665   0.1847    4.0932        0.0930\n",
-      "5                   0.0700    0.9500   8.8472   0.1859    4.0944        0.1001\n",
-      "5                   0.0500    0.8000   8.8571   0.1929    4.0941        0.1028\n",
-      "5                   0.0700    0.8000   8.8819   0.1963    4.0950        0.1136\n"
+      "             learning_rate  momentum  runtime  mae_len  rmse_len  rmse_len_99p\n",
+      "coarse_step                                                                   \n",
+      "9                   0.0500    0.9000   4.1143   1.1239   16.0414        0.1921\n",
+      "9                   0.0500    0.9500   4.1889   0.9387   13.8766        0.1739\n",
+      "9                   0.0700    0.9000   4.2433   0.9465   13.8769        0.1936\n",
+      "9                   0.0700    0.9500   4.3541   0.9423   13.8771        0.1973\n",
+      "9                   0.0500    0.8500   4.3565   1.1273   16.0409        0.1931\n"
      ]
     }
    ],
    "source": [
     "data_sliced = data_n.loc[(data_n['mae_len'] < 0.3)]\n",
     "data_sliced = data_sliced.sort_values(by=['runtime', 'rmse_len'])\n",
-    "data_sliced = data_sliced[:10]\n",
-    "data_sliced = data_sliced[:10]\n",
+    "data_sliced = data_sliced[:5]\n",
+    "print(data_sliced)\n",
+    "data_sliced = data_n.loc[(data_n['rmse_len_99p'] < 0.3)]\n",
+    "data_sliced = data_sliced.sort_values(by=['runtime', 'rmse_len'])\n",
+    "data_sliced = data_sliced[:5]\n",
     "print(data_sliced)"
    ]
   },
@@ -568,21 +591,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                               runtime  mae_len  rmse_len\n",
-      "technique                                                \n",
-      "esprit                          1.6537   0.0000    0.0000\n",
-      "music_coarse_fine_grid_search 108.1367   0.3367    7.2494\n",
-      "music_gradient_simple          56.8658   0.2845    6.2201\n",
-      "music_gradient_adapt_lr        39.9917   0.3205    7.2172\n",
-      "music_gradient_momentum        41.2383   0.2796    6.5136\n",
-      "music_gradient_nesterov        43.1562   0.2588    6.2032\n"
+      "                                 runtime  mae_len  rmse_len\n",
+      "technique                                                  \n",
+      "esprit                            1.6537   0.0000    0.0000\n",
+      "music_coarse_fine_grid_search   108.1367   0.3367    7.2494\n",
+      "music_gradient_simple            56.8658   0.2845    6.2201\n",
+      "music_gradient_adapt_lr          39.9917   0.3205    7.2172\n",
+      "music_gradient_momentum          41.2383   0.2796    6.5136\n",
+      "music_gradient_nesterov          43.1562   0.2588    6.2032\n",
+      "music_fine_grid_search        8,917.4060   0.1963    5.0916\n"
      ]
     }
    ],
